# caffe-ssd-vedio-demo

./: CMakeLists.txt  README.md  class_map.h  main.cpp  main1.cpp  ssd_detect.h
model/coco/: deploy.prototxt
vedios/: webwxgetvideo
